net-sf-ucanaccess-fork: Updates for code style